4.5.2 PENDING

+ The new delayed retry feature now works properly for cycling tasks
beyond the first cycle.

+ For ssh messaging, where remote messaging commands re-invoke
themselves on the suite host, the path to cylc on the suite host is now
transferred explicitly via the remote task job script - we no longer
rely on the user's .profile on the suite host for this.

+ New 'retry' event hook - calls the event handler if a task fails when
it has a retry lined up.

+ New User Guide sections under "Running Suites" to document "Automatic
Retry On Task Failure" and "Suite And Task Event Handling".

+ Initial and final cycle times: $CYLC_SUITE_INITIAL_CYCLE_TIME and
$CYLC_SUITE_FINAL_CYCLE_TIME now persist across restarts by default, but
the old value in the restart file can be ignored by command line option.
Values hardwired into the suite.rc file cannot be ignored. The
environment variables are now always defined, but may have the value
"None" if no value is set on the command line, state dump, or suite.rc
file. $CYLC_SUITE_INITIAL_CYCLE_TIME is only set by a cold start (and
thence persists through restarts), not by a warm start (which is really
a form of restart that does not explicitly reference a previous suite
state). In a warm start you can optionally push the value of "initial
cycle time", command line or suite.rc, through to the environment
variable.

+ moved task "initial scripting" below cylc-defined task environment
so that suite and task identity can be used in intiial scripting.

+ Tasks that specify "enable resurrection = True" will be revived from
the dead if they start running again (by external non-cylc means) after
reporting failure. This can be used to handle HPC-style job preemption.

+ Moved the User Guide documentation of cylc version re-invocation from
the installation section to the running suites section. 

+ Correct Quick Start Guide suite names (the initial component of the
registration name hierarchy had been omitted.
